--- a/src/app/led/led.component.html
+++ b/src/app/led/led.component.html
@@ -1,6 +1,8 @@
 <p>
   led works!
 </p>
-<div style="width: 50px; height: 50px; border: 1px solid black;" [style.backgroundColor]="color">
-  {{color}}
+<div style="width: 50px; height: 50px; border: 1px solid black;" [style.backgroundColor]="color" (click)="selectColor($event)">
 </div>
+<p>
+  {{color | color:format}}
+</p>
